--- a/projetos/templates/index_aluno.html
+++ b/projetos/templates/index_aluno.html
@@ -10,6 +10,7 @@
 <a href="{% url 'perfil' %}"><h5>Perfil do Aluno</h5></a>
 <a href="{% url 'areas_interesse' %}"><h5>Selecionar Áreas de Interesse</h5></a>
 <a href="{% url 'projetos' %}"><h5>Selecionar Projetos</h5></a>
+<a href="{% url 'calendario' %}"><h5>Calendário</h5></a>
 &nbsp;<br>
 <font color="red">Prazo para a seleção dos projetos : <b>{{ configuracao.prazo }}</b></font>
 {% endblock %}
