--- a/projetos/templates/projetos/organizacoes.html
+++ b/projetos/templates/projetos/organizacoes.html
@@ -10,17 +10,16 @@
 {% endblock %}
 
 {% block content %}
-    <h3>Organizações Parceiras</h3>
-
-    {% if organizacoes_list %}
+  <h3>Organizações Parceiras</h3>
+  {% if organizacoes_list %}
     <table id="OrganizacoesTable">
-        <tr>
-                <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Sigla</th>
-                <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Organização</th>
-            </tr>
-        {% for organizacao in organizacoes_list %} 
+      <tr>
+        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Sigla</th>
+        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Organização</th>
+      </tr>
+      {% for organizacao in organizacoes_list %} 
         <tr class="item">
-            <td>
+          <td>
             <a href="{% url 'organizacao' organizacao.login %}"> <!-- UM DIA ACERTAR ISSO -->
               {{organizacao.sigla}}
             </a>
@@ -31,11 +30,11 @@
             </a>
           </td>
         </tr>
-        {% endfor %}
-        </table>
-        <p>&nbsp;</p>
-    {% else %}
-      <p>Não existem organizações cadastradas.</p>
-    {% endif %}
-
+      {% endfor %}
+    </table>
+    <p>&nbsp;</p>
+    <strong>Número Total de Organizações Parceiras:</strong> {{ organizacoes_list.count }}
+  {% else %}
+    <p>Não existem organizações cadastradas.</p>
+  {% endif %}
 {% endblock %}
