--- a/projetos/templates/index_aluno.html
+++ b/projetos/templates/index_aluno.html
@@ -5,12 +5,78 @@
     Data: 15 de Maio de 2019
 {% endcomment %}
 
+{% block head %}
+    <style>
+        #snackbar {
+            visibility: hidden;
+            min-width: 250px;
+            margin-left: -125px;
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            border-radius: 2px;
+            padding: 16px;
+            position: fixed;
+            z-index: 1;
+            left: 50%;
+            bottom: 30px;
+            font-size: 17px;
+        }
+        
+        #snackbar.show {
+            visibility: visible;
+            -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+            animation: fadein 0.5s, fadeout 0.5s 2.5s;
+        }
+        
+        @-webkit-keyframes fadein {
+            from {bottom: 0; opacity: 0;} 
+            to {bottom: 30px; opacity: 1;}
+        }
+        
+        @keyframes fadein {
+            from {bottom: 0; opacity: 0;}
+            to {bottom: 30px; opacity: 1;}
+        }
+        
+        @-webkit-keyframes fadeout {
+            from {bottom: 30px; opacity: 1;} 
+            to {bottom: 0; opacity: 0;}
+        }
+        
+        @keyframes fadeout {
+            from {bottom: 30px; opacity: 1;}
+            to {bottom: 0; opacity: 0;}
+        }
+    </style>
+{% endblock %}
+
 {% block content %}
-&nbsp;<br>
-<a href="{% url 'perfil' %}"><h5>Perfil do Aluno</h5></a>
-<a href="{% url 'areas_interesse' %}"><h5>Selecionar Áreas de Interesse</h5></a>
-<a href="{% url 'projetos' %}"><h5>Selecionar Projetos</h5></a>
-<a href="{% url 'calendario' %}"><h5>Calendário</h5></a>
-&nbsp;<br>
-<font color="red">Prazo para a seleção dos projetos : <b>{{ configuracao.prazo }}</b></font>
+
+    <a href="{% url 'perfil' %}"><h5>Perfil do Aluno</h5></a>
+    <a href="{% url 'calendario' %}"><h5>Calendário</h5></a>
+
+    <hr>
+
+    <a {% if True %} class="disabled" onclick="myFunction()" {% else %} href="{% url 'areas_interesse' %}" {% endif %} >
+        <h5>Selecionar Áreas de Interesse</h5></a>
+
+    <a {% if True %} class="disabled" onclick="myFunction()" {% else %} href="{% url 'projetos' %}" {% endif %} >
+        <h5>Selecionar Projetos</h5></a>
+
+    <a {% if True %} class="disabled" onclick="myFunction()" {% else %} href="{% url 'submissao' %}" {% endif %} >
+        <h5>Submissão de Formulário</h5></a>
+
+    &nbsp;<br>
+    <font color="red">Prazo para a seleção dos projetos : <b>{{ configuracao.prazo }}</b></font>
+
+    <div id="snackbar">Prazo para a seleção dos projetos vencido.</div>
+    <script>
+        function myFunction() {
+            var x = document.getElementById("snackbar");
+            x.className = "show";
+            setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
+        }
+    </script>
+
 {% endblock %}
