--- a/projetos/templates/projetos/fechados.html
+++ b/projetos/templates/projetos/fechados.html
@@ -21,8 +21,9 @@
       {% for projeto,prioridades in mylist %} 
         {% if projeto.disponivel %}
           <a href="{% url 'completo' projeto.id %}" class="dark-blue-bold"> 
-            {{projeto.titulo}} ({{ projeto.empresa.nome_empresa }})
+            {{projeto.titulo}} ({{ projeto.empresa.nome_empresa }})<br>
           </a>
+          <p style="margin-left:1em;">Orientador: {{projeto.orientador.user.first_name}} {{projeto.orientador.user.last_name}}</p>
           <ol>
           {% for aluno,prioridade in prioridades %} 
             <li><a href="{% url 'aluno' aluno.id %}">{{aluno.user.first_name}} [{{ aluno.get_curso_display }}]&nbsp;=>&nbsp;
