--- a/projetos/templates/projetos/todos.html
+++ b/projetos/templates/projetos/todos.html
@@ -23,11 +23,11 @@
           <a href="{% url 'completo' projeto.id %}" class="dark-blue-bold"> 
             {{projeto.titulo}} ({{ projeto.empresa.nome_empresa }})<br>
           </a>
-          <p style="margin-left:1em;">Orientador: {{projeto.orientador.user.first_name}} {{projeto.orientador.user.last_name}}</p>
+          <p style="margin-left:1em;">Orientador: {{projeto.orientador.user.first_name}} {{projeto.orientador.user.last_name}} &lt;{{projeto.orientador.user.email}}&gt; </p>
           <p style="margin-left:1em;">Semestre: {{projeto.ano}}.{{projeto.semestre}}</p>
           <ol>
           {% for aluno,prioridade in prioridades %} 
-            <li><a href="{% url 'aluno' aluno.id %}">{{aluno.user.first_name}} {{aluno.user.last_name}} [{{ aluno.get_curso_display }}]&nbsp;=>&nbsp;
+            <li><a href="{% url 'aluno' aluno.id %}">{{aluno.user.first_name}} {{aluno.user.last_name}} &lt;{{aluno.user.email}}&gt; [{{ aluno.get_curso_display }}]&nbsp;=>&nbsp;
               {% if prioridade == 0 %}
                 prioridade não definida
               {% else %}
