Separados relatorios e carregamentos em diferente paginas

--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -6,84 +6,14 @@
 {% endcomment %}
 
 {% block content %}
-<h3>Exportar dados</h3>
-<table>
-    <tr>
-        <td>Tudo</td>
-        <td></td>
-        <td><b><a href="{% url 'backup' 'xls'%}">XLS</a></b></td>
-        <td><b><a href="{% url 'backup' 'json'%}">JSON</a></b></td>
-    </tr>
-    <tr>
-        <td>Projetos</td>
-        <td><a href="{% url 'export' 'projetos' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'projetos' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'projetos' 'json'%}">JSON</a></td>
-    </tr>
-    <tr>
-        <td>Organizacoes</td>
-        <td><a href="{% url 'export' 'organizacoes' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'organizacoes' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'organizacoes' 'json'%}">JSON</a></td>
-        
-    </tr>
-    <tr>
-        <td>Opcoes</td>
-        <td><a href="{% url 'export' 'opcoes' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'opcoes' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'opcoes' 'json'%}">JSON</a></td>
-    </tr>
-    <tr>
-        <td>Usuários</td>
-        <td><a href="{% url 'export' 'usuarios' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'usuarios' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'usuarios' 'json'%}">JSON</a></td>
-    </tr>
-    <tr>
-        <td>Alunos</td>
-        <td><a href="{% url 'export' 'alunos' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'alunos' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'alunos' 'json'%}">JSON</a></td>
-    </tr>
-    <tr>
-        <td>Professores</td>
-        <td><a href="{% url 'export' 'professores' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'professores' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'professores' 'json'%}">JSON</a></td>
-    </tr>
-    <tr>
-        <td>Configuração</td>
-        <td><a href="{% url 'export' 'configuracao' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'configuracao' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'configuracao' 'json'%}">JSON</a></td>
-    </tr>
-</table>
-<a href="{% url 'email_backup'%}">Envia e-mail com todos os backups</a>
 <br>
-<br>
-<h3>Relatórios</h3>
-<table>
-    <tr>
-        <td>Projetos</td>
-        <td><a href="{% url 'relatorio' 'projetos' 'HTML'%}">HTML</a></td>
-        <td><a href="{% url 'relatorio' 'projetos' 'PDF'%}">PDF</a></td>
-    </tr>
-    <tr>
-        <td>Alunos</td>
-        <td><a href="{% url 'relatorio' 'alunos' 'HTML'%}">HTML</a></td>
-        <td><a href="{% url 'relatorio' 'alunos' 'PDF'%}">PDF</a></td>
-    </tr>
-</table>
-<a href="{% url 'relatorio_backup'%}">Envia e-mail com todos os relatórios</a>
-<br>
-<br>
-<a href=""><h5>Enviar para lista de e-mails</h5></a>
+<a href=""><h5>Enviar para lista de e-mails (NOT WORKING)</h5></a>
 <a href="{% url 'alunos' %}"><h5>Listagem completa de alunos</h5></a>
 <a href="{% url 'todos' %}"><h5>Listagem completa de projetos</h5></a>
 <a href="{% url 'servico' %}"><h5>Habilitar aviso se manutenção</h5></a>
 
 <hr>
-<h5>Carrega dados</h5>
-<a href="{% url 'carrega' 'disciplinas' %}"><h5>disciplinas</h5></a>
-<a href="{% url 'carrega' 'alunos' %}"><h5>alunos</h5></a>
+<a href="{% url 'exportar' %}"><h5>Exportar dados</h5></a>
+<a href="{% url 'relatorios' %}"><h5>Relatórios</h5></a>
+<a href="{% url 'carregar' %}"><h5>Carregar dados (CUIDADO PODO COMPROMETER BASE DE DADOS)</h5></a>
 {% endblock %}
