aluno pode ver agora projeto que esta alocado, orientador e grupo

--- a/projetos/templates/index_aluno.html
+++ b/projetos/templates/index_aluno.html
@@ -67,6 +67,9 @@
     <a {% if True %} class="disabled" onclick="myFunction()" {% else %} href="{% url 'submissao' %}" {% endif %} >
         <h5>Submissão de Formulário</h5></a>
 
+    <hr>
+    <a href="{% url 'meuprojeto' %}"><h5>Meu Projeto</h5></a>
+
     &nbsp;<br>
     <font color="red">Prazo para a seleção dos projetos : <b>{{ configuracao.prazo }}</b></font>
 
