--- a/projetos/templates/index_documentos.html
+++ b/projetos/templates/index_documentos.html
@@ -7,9 +7,10 @@
 
 {% block content %}
 <a href="{% url 'download' 'RegulamentoPFE.pdf' %}"><h5>Regulamento</h5></a>
-<a href="{% url 'download' '.pdf' %}"><h5>Plano de Aprendizagem</h5></a>
+<a href="{% url 'download' 'PlanoDeAprendizagemPFE.pdf' %}"><h5>Plano de Aprendizagem</h5></a>
 <hr>
-<a href="{% url 'download' '.pdf' %}"><h5>Guia para confecção de planejamento</h5></a>
+<a href="{% url 'download' '1_GuiaParaAlunos_v3.pdf' %}"><h5>Guia para Alunos</h5></a>
+<a href="{% url 'download' '2_ManualParaElaboracaoDePlanejamento_v3.pdf' %}"><h5>Guia para confecção de planejamento</h5></a>
 <a href="{% url 'download' '.pdf' %}"><h5>Guia para confecção de relatórios</h5></a>
 <hr>
 
