--- a/projetos/templates/projetos/organizacao_completo.html
+++ b/projetos/templates/projetos/organizacao_completo.html
@@ -33,17 +33,25 @@
   {% endfor %}
   <br><strong>endereço(s):</strong> {{ organization.endereco|linebreaks }}
   <br>
-  <hr>
+  
   {% if organization.contrato %}
+  <hr>
     <strong>contratos:</strong> <a href="{% url 'contrato' organization.sigla organization.documento %}"> {{ organization.documento }} </a>
   {% endif %}
+  
   <hr>
-
   <h3>Projetos</h3>
   {% for projeto in organization.projeto_set.all %}
     <a href="{% url 'completo' projeto.id %}"> 
       <li>{{projeto.titulo}}</li>
     </a>
   {% endfor %}
+
+  <hr>
+  <h3>Anotações</h3>
+  {% for anotacao in organization.anotacao_set.all %}
+    {{anotacao.autor.first_name}} {{anotacao.autor.last_name}} [{{anotacao.data}}] : {{anotacao.texto}}<br>
+  {% endfor %}
+
 
 {% endblock %}
