--- a/projetos/templates/projetos/fechados.html
+++ b/projetos/templates/projetos/fechados.html
@@ -13,17 +13,31 @@
 {% block content %}
 
   <h3>Projetos Fechados</h3>
-  <br>
-
+  <label for="filter">Edição:</label>
+  <select class="filter" data-tableId="projetos">
+    <option value="todas">todas</option>
+    <option value="2018.2">2018.2</option>
+    <option value="2019.1">2019.1</option>
+    <option value="2019.2">2019.2</option>
+    <option value="2020.1">2020.1</option>
+    <option value="2020.2">2020.2</option>
+  </select>
+  <br><br><br>
+  
     {% if mylist %}
-    
-    <div>      
+      <table id="projetos">
       {% for projeto,prioridades in mylist %} 
         {% if projeto.disponivel %}
+          <tr id="two"  class="row" data-type="{{projeto.ano}}.{{projeto.semestre}}"><td id="ptd">
           <a href="{% url 'completo' projeto.id %}" class="dark-blue-bold"> 
-            {{projeto.titulo}} ({{ projeto.empresa.nome_empresa }})<br>
+              {{projeto.titulo}}<br>
           </a>
+          <p style="margin-left:1em;">Empresa: <a href="{% url 'organizacao' projeto.empresa.login %}">
+              {{ projeto.empresa.nome_empresa }}
+            </a></p>
+          <p style="margin-left:1em;">Edição: {{projeto.ano}}.{{projeto.semestre}}</p>
           <p style="margin-left:1em;">Orientador: {{projeto.orientador.user.first_name}} {{projeto.orientador.user.last_name}} &lt;{{projeto.orientador.user.email}}&gt; </p>
+          <p style="margin-left:1em;">Alunos:</p>
           <ol>
           {% for aluno,prioridade in prioridades %} 
             <li><a href="{% url 'aluno' aluno.id %}">{{aluno.user.first_name}} {{aluno.user.last_name}} &lt;{{aluno.user.email}}&gt; [{{ aluno.get_curso_display }}] &nbsp;=>&nbsp;
@@ -35,16 +49,34 @@
             </a></li>
           {% endfor %}
           </ol>
-          <br><br>
+          <br>
+          </td></tr>
         {% endif %}
       {% endfor %}
-    </div>
+      </table>
+
+      <script type="text/javascript">
+        $(".filter").change(function() {
+          var filterValue = $(this).val();
+          var row = $('.row'); 
+          row.hide()
+          row.each(function(i, el) {
+               if($(el).attr('data-type') == filterValue) {
+                   $(el).show();
+               }
+          });
+          if ("todas" == filterValue) {
+            row.show();
+          }
+        });
+      </script>
     
     <hr>
     <b>Total de projetos = {{ length }}</b> <br>
     <b>Total de alunos = {{ nalunos }}</b> <br>
     
     <br><br>
+
 
     <div id="canvas-holder">
         <canvas id="chart-area"></canvas>
