--- a/projetos/templates/projetos/fechados.html
+++ b/projetos/templates/projetos/fechados.html
@@ -40,12 +40,13 @@
           <p style="margin-left:1em;">Alunos:</p>
           <ol>
           {% for aluno,prioridade in prioridades %} 
-            <li><a href="{% url 'aluno' aluno.id %}">{{aluno.user.first_name}} {{aluno.user.last_name}} &lt;{{aluno.user.email}}&gt; [{{ aluno.get_curso_display }}] &nbsp;=>&nbsp;
+            <li><a href="{% url 'aluno' aluno.id %}">{{aluno.user.first_name}} {{aluno.user.last_name}} &lt;{{aluno.user.email}}&gt; [{{ aluno.get_curso_display }}] &nbsp;
               {% if prioridade == 0 %}
-                prioridade não definida
+                (prioridade não definida)
               {% else %}
-                prioridade # {{prioridade}}
+                (prioridade # {{prioridade}})
               {% endif %}
+              { {{ aluno.alocacao_set.first.get_conceito_display }} }
             </a></li>
           {% endfor %}
           </ol>
