bug proj. alocado aluno resolvido e lista de projetos de professores

--- a/projetos/templates/projetos/professores.html
+++ b/projetos/templates/projetos/professores.html
@@ -22,7 +22,9 @@
     {% for professor,grupos in professores %} 
       <tr>
         <td>
-          {{professor.user.first_name}} {{professor.user.last_name}}
+          <a href="{% url 'professor_detail' professor.id %}">
+            {{professor.user.first_name}} {{professor.user.last_name}}
+          </a>
         </td>
         <td>
           {{grupos}}
