--- a/users/templates/users/professor_detail.html
+++ b/users/templates/users/professor_detail.html
@@ -7,7 +7,13 @@
 
 {% block content %}
   <h3>{{professor.user.first_name}}&nbsp;{{professor.user.last_name}}</h3>
-  <strong>e-mail:</strong> {{professor.user.email}} <br>
+  <strong>e-mail:</strong> <a href="mailto:{{professor.user.email}}"> &lt;{{professor.user.email}}&gt;</a><br>
+  {% if professor.website %}
+    <strong>website:</strong> <a href="{{ professor.website }}"> {{ professor.website }} </a><br>
+  {% endif %}
+  {% if professor.lattes %}
+    <strong>Lattes:</strong> <a href="{{ professor.lattes }}"> {{ professor.lattes }} </a><br>
+  {% endif %}
 
   {% if projetos %}
     <hr>
