inserida agenda de bancas

--- a/projetos/templates/index_professor.html
+++ b/projetos/templates/index_professor.html
@@ -7,6 +7,7 @@
 
 {% block content %}
     <a href="{% url 'fechados' %}">          <h5>Resumo de Projetos Fechados</h5>         </a>
+    <a href="{% url 'bancas' %}">            <h5>Data das Bancas</h5>                     </a>
     <hr>
     <a href="{% url 'alunos_inscrevendo' %}"><h5>Listagem de Alunos se Inscrevendo</h5>   </a>
     <a href="{% url 'projetos_lista' %}">    <h5>Listagem de Projetos Disponíveis</h5>    </a>
