--- a/projetos/templates/projetos/fechados.html
+++ b/projetos/templates/projetos/fechados.html
@@ -28,9 +28,9 @@
       <table id="projetos">
       {% for projeto,prioridades in mylist %} 
         {% if projeto.disponivel %}
-          <tr id="two"  class="row" data-type="{{projeto.ano}}.{{projeto.semestre}}"><td id="ptd">
+          <tr id="two" class="row" data-type="{{projeto.ano}}.{{projeto.semestre}}"><td id="ptd">
           <a href="{% url 'completo' projeto.id %}" class="dark-blue-bold"> 
-              {{projeto.titulo}}<br>
+            {{projeto.titulo}}<br>
           </a>
           <p style="margin-left:1em;">Empresa: <a href="{% url 'organizacao' projeto.empresa.login %}">
               {{ projeto.empresa.nome_empresa }}
@@ -64,24 +64,31 @@
           var filterValue = $(this).val();
           var row = $('.row'); 
           row.hide()
+          var count_projects = 0
+          var count_alunos = 0
           row.each(function(i, el) {
                if($(el).attr('data-type') == filterValue) {
                    $(el).show();
+                   count_projects = count_projects + 1
+                   count_alunos = count_alunos + $(el).find("TD").find("OL").children().length;
                }
           });
           if ("todas" == filterValue) {
+            count_projects = {{ length }}
+            count_alunos = {{ nalunos }}
             row.show();
           }
+          document.getElementById("myCountProj").innerHTML = count_projects;
+          document.getElementById("myCountAlun").innerHTML = count_alunos
         });
       </script>
     
     <hr>
-    <b>Total de projetos = {{ length }}</b> <br>
-    <b>Total de alunos = {{ nalunos }}</b> <br>
-    
+    <b>Total de projetos = <span id="myCountProj">{{ length }}</span> </b> <br>
+    <b>Total de alunos = <span id="myCountAlun">{{ nalunos }}</span> </b> <br>    
     <br><br>
 
-
+    TABELA ABAIXO SÓ FUNCIONA PARA TODOS OS PROJETOS!
     <div id="canvas-holder">
         <canvas id="chart-area"></canvas>
       </div>
