--- a/projetos/templates/projetos/projetos_lista.html
+++ b/projetos/templates/projetos/projetos_lista.html
@@ -7,22 +7,43 @@
 
 {% block head %}
 <script src="https://www.w3schools.com/lib/w3.js"></script>
+<script>var fechados = 0</script>
 {% endblock %}
 
 {% block content %}
-  <h3>Projetos</h3>
+  <h3>Projetos
+    {% if periodo == "antigos" %}
+      publicados até 
+    {% elif periodo == "disponiveis" %}
+      disponíveis após
+    {% endif %}
+    {{configuracao.ano}}.{{configuracao.semestre}}
+  </h3>
   {% if projetos %}
     <table id="ProjetosTable">
       <tr>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Projeto</th>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Organização</th>
+        <th class="text-center">Fechado</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Projeto</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Período</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Organização</th>
       </tr>      
       {% for projeto in projetos %} 
       <tr class="item">
+        {% if projeto.alocacao_set.all.count > 0  %}
+          <td class="text-success">
+            <script>fechados += 1</script>
+        {% else %}
+          <td class="text-danger">
+        {% endif %}
+          &#x2B24;
+        </td>
         <td>
           <a href="{% url 'completo' projeto.id %}">
             {{projeto.titulo}}
           </a>
+        </td>
+        <td>
+            {{projeto.ano}}.{{projeto.semestre}}
         </td>
         <td>
           <a href="{% url 'organizacao' projeto.empresa.login %}">
@@ -32,8 +53,12 @@
       </tr>
       {% endfor %}
     </table>
+    <script>
+      w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(3)')
+    </script>
     <p>&nbsp;</p>
-    <strong>Número Total de Projetos:</strong> {{ projetos.count }}
+    <strong>Número Total de Projetos Publicados:</strong> {{ projetos.count }}<br>
+    <strong>Número Total de Projetos Fechados:</strong> <script>document.write(fechados);</script><br>
   {% else %}
     <p>Não existem projetos disponíveis.</p>
   {% endif %}
