--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -25,6 +25,13 @@
 </ul>
 
 <hr>
+<a href="{% url 'tabela_documentos' %}"><h5>Tabelas de Documentação dos Projetos Fechados</h5></a>
+
+    
+
+
+
+<hr>
 <a href="{% url 'exportar' %}"><h5>Exportar dados</h5></a>
 <a href="{% url 'relatorios' %}"><h5>Relatórios</h5></a>
 <a href="{% url 'carregar' %}"><h5>Carregar dados (CUIDADO PODE COMPROMETER BASE DE DADOS)</h5></a>
