--- a/projetos/templates/index_documentos.html
+++ b/projetos/templates/index_documentos.html
@@ -6,12 +6,10 @@
 {% endcomment %}
 
 {% block content %}
-<a href="{% url 'download' 'RegulamentoPFE.pdf' %}"><h5>Regulamento</h5></a>
-<a href="{% url 'download' 'PlanoDeAprendizagemPFE.pdf' %}"><h5>Plano de Aprendizagem</h5></a>
-<hr>
-<a href="{% url 'download' '1_GuiaParaAlunos_v3.pdf' %}"><h5>Guia para Alunos</h5></a>
-<a href="{% url 'download' '2_ManualParaElaboracaoDePlanejamento_v3.pdf' %}"><h5>Guia para confecção de planejamento</h5></a>
-<a href="{% url 'download' '.pdf' %}"><h5>Guia para confecção de relatórios</h5></a>
-<hr>
-
+    <a href="../..{{MEDIA_URL}}{{regulamento.documento}}"><h5>Regulamento do PFE</h5></a>
+    <a href="../..{{MEDIA_URL}}{{plano_de_aprendizagem.documento}}"><h5>Plano de Aprendizagem</h5></a>
+    <hr>
+    <a href="../..{{MEDIA_URL}}{{manual_aluno.documento}}"><h5>Manual do Alunos</h5></a>
+    <a href="../..{{MEDIA_URL}}{{manual_relatorio.documento}}"><h5>Manual para Confecção de Relatórios</h5></a>
+    <hr>
 {% endblock %}
