adicionado manual de planejamento

--- a/projetos/templates/index_documentos.html
+++ b/projetos/templates/index_documentos.html
@@ -10,6 +10,7 @@
     <a href="../..{{MEDIA_URL}}{{plano_de_aprendizagem.documento}}"><h5>Plano de Aprendizagem</h5></a>
     <hr>
     <a href="../..{{MEDIA_URL}}{{manual_aluno.documento}}"><h5>Manual do Alunos</h5></a>
+    <a href="../..{{MEDIA_URL}}{{manual_planejamento.documento}}"><h5>Manual para Confecção de Relatórios de Planejamento</h5></a>
     <a href="../..{{MEDIA_URL}}{{manual_relatorio.documento}}"><h5>Manual para Confecção de Relatórios</h5></a>
     <hr>
 {% endblock %}
